# Psychological_counselling

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: integration.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/admin/: appointment.py  patient.py  user.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: appointments.py  auth.py  patients.py
backend/app/core/: auth.py  config.py
backend/app/core/models/: database.py
backend/app/crud/: crud_appointment.py  crud_patient.py  crud_user.py
backend/app/db/: database.py
backend/app/mail/: __init__.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 04a8e272b5f0_add_user_to_patient.py  4af8040a1ba7_add_unique_constraints_to_user.py  924985e23b07_added_appointment_model.py  a998fb6c5a6a_create_patient_model.py  aaadd534696e_added_name_to_appointments.py  dcc0d8c23bb0_created_user_model.py
backend/app/models/: appointment.py  patient.py  user.py
backend/app/schemas/: appointment.py  patient.py  token.py  user.py
backend/app/tests/: conftest.py  test_main.py
backend/app/tests/api/api_v1/appointments/: conftest.py  test_e2e.py
backend/app/tests/api/api_v1/auth/: conftest.py  test_e2e.py
backend/app/tests/api/api_v1/patients/: conftest.py  test_e2e.py
config/: backend.Dockerfile  frontend.Dockerfile
config/backend/: install.sh  run.sh
config/frontend/: run.sh
config/scripts/: connection_test
frontend/: .babelrc  .eslintrc.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.html  index.tsx
frontend/src/@types/assets/: index.d.ts
frontend/src/__tests__/: App.test.tsx  LandingPage.test.tsx
frontend/src/assets/images/: index.ts
frontend/src/core/: routes.ts
frontend/src/core/api/: index.ts  urls.ts
(+97 files in other folders)
