[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Jakub Tomala <jakub.tomala@stxnext.pl>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pydantic = {extras = ["email"], version = "^1.10.2"}
sqladmin = "^0.6.0"
SQLAlchemy-Utils = "^0.38.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.971"
pylint = "^2.14.5"
flake8 = "^5.0.4"
pytest = "^7.1.2"
requests = "^2.28.1"
sqlalchemy-stubs = "^0.4"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint.MASTER]
disable = ["C0114", "C0116", "C0115", "R0903", "C0103" , "W0613", "W0621"]
ignore = "migrations"
extension-pkg-whitelist = "pydantic"

[tool.mypy]
plugins = "sqlmypy"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
